# ha-homekit-heatercooler

./: .gitignore  .ruff.toml  CHANGELOG.md  README.md  hacs.json  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  core-validation.yml  harness-smoke.yml  release.yml  validate.yml
custom_components/homekit_heatercooler/: __init__.py  climate_base.py  climate_util.py  config_flow.py  const.py  manifest.json  patcher.py  sensor.py  strings.json  type_heatercooler.py
scripts/: check.sh  core-wiring.patch  port_to_core.py
tests/: __init__.py  common.py  conftest.py  test_climate_util.py  test_config_flow.py  test_hap_writes.py  test_init.py  test_patcher.py  test_sensor.py  test_setters.py  test_type_heatercooler.py
tests/harness/: configuration-native.yaml  configuration.yaml  hap_write_smoke.py
