[project]
name = "ha-homekit-heatercooler"
version = "1.4.1"
description = "Home Assistant custom integration to expose selected climate entities as HomeKit HeaterCooler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14.2,<3.15"

[dependency-groups]
dev = [
  "HAP-python==5.0.0",
  "PyQRCode==1.2.1",
  "PyTurboJPEG==1.8.3",
  "base36==0.1.1",
  "coverage>=7",
  "fnv-hash-fast==2.0.3",
  "ha-ffmpeg>=3.2.2",
  "homekit-audio-proxy==1.2.1",
  "mypy>=1.15",
  "pytest-homeassistant-custom-component>=0.13.316",
  "ruff>=0.13.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
  "homeassistant.*",
  "pyhap",
  "pyhap.*",
  "pytest_homeassistant_custom_component.*",
  "voluptuous",
  "voluptuous.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 70

[tool.uv]
override-dependencies = ["pytest>=9.0.3"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["custom_components/homekit_heatercooler/manifest.json:version"]
build_command = "pip install uv && uv lock"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
assets = ["uv.lock"]

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "build"]
other_allowed_tags = ["chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }
